fixed team name overflow

--- a/src/css/scoreboard.css
+++ b/src/css/scoreboard.css
@@ -321,6 +321,7 @@ sup {
     font-size: 0.95em;
     margin: 2.75em 0 1em 0;
     overflow: scroll !important;
+    width: 100vw;
 }
 
 .award-mode #team-list {
